Fixing horizontal scrolling on mobile, style changes

--- a/Styles/janitor.css
+++ b/Styles/janitor.css
@@ -1,4 +1,4 @@
 .character-picture {
-    width: 70%;
-    left: 15%;
+    width: 80%;
+    left: 10%;
 }
