--- a/Styles/roostandor.css
+++ b/Styles/roostandor.css
@@ -1,4 +1,10 @@
 .character-picture {
-    width: 55%;
+    width: 75%;
     left: 15%;
+}
+
+@media (max-width: 430px) {
+    h1 {
+        font-size: 6rem;
+    }
 }
